
public static class ConstPrm
{
    public static class Animation
    {
        public const string MOVE_SPEED_PRM = "SPEED";
        public const string ATTACK = "ATTACK";
        public const string DAMAGE = "DAMAGE";
        public const string DIE = "DIE";
    }


    public static class PrefsData
    {
        public const string GAME_RESTART_FLAG = "GAME_RESTART_FLAG";
    }
}